Fix bug with icons overflow in footer section

--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -18,7 +18,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: space-between;
-  gap: 20px;
+  // gap: 20px;
 
   @include vp-1023 {
     flex-direction: column;
@@ -30,7 +30,7 @@
 }
 
 .page-footer__inner {
-  width: 215px;
+  min-width: 215px;
   margin-top: -7px;
 
   @include vp-1023 {
@@ -65,6 +65,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
   width: 150px;
   margin: 0;
   margin-left: 10px;
@@ -103,7 +104,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   width: 845px;
-  height: 170px;
+  min-height: 170px;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -119,6 +120,15 @@
 }
 
 .page-footer__menu-item {
+  &--topics {
+    width: 415px;
+  }
+
+  &--contacts {
+    position: relative;
+    right: 35px;
+  }
+
   @include vp-767 {
     position: relative;
 
@@ -180,7 +190,8 @@
 }
 
 .page-footer__menu-item:nth-child(2n) .page-footer__menu-subitem {
-  width: 345px;
+  // width: 345px;
+  width: 310px;
 
   @include vp-1023 {
     width: 320px;
